reorganising layout and updating about page

--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -1,9 +1,9 @@
 ---
-page_title: About
-tagline: ruby on rails + js developer
+title: Let's unlock your startup’s full growth potential.
+name: About
+tagline: growth-driven designer &amp; developer
 theme: about
-tags: zimba russeau, ruby on rails, javascript, developer, dsgndhat
 ---
 
-<%= partial 'shared/about' %>
-<%= partial 'shared/footer' %>
+  <%= partial 'layouts/shared/about' %>
+  <%= partial 'layouts/shared/footer' %>
