--- a/source/assets/stylesheets/app.css.scss
+++ b/source/assets/stylesheets/app.css.scss
@@ -7,15 +7,8 @@
 'base/mixins',
 'base/extends',
 'layout/layout',
-'components/blockquote',
-'components/table',
+'components/components',
 'components/code',
-'components/tabs',
-'components/works',
 'components/about',
-'components/blog',
-'components/pagination',
-'components/archives',
-'components/footer',
 'helpers/animations',
 'helpers/helpers';
