--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,9 @@
 ---
+title: Growth Driven Designer and Developer
+name: Dsgndhat
 tagline: coffee. meditate. code
 theme: works
-tags: dsgndhat, ruby on rails, javascript, developer
 ---
 
-<%= partial 'shared/works-list', locals: { items: data.works.projects } %>
+  <%= partial 'layouts/shared/works-list' %>
+  <%= partial 'layouts/shared/footer' %>
