--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,12 +1,13 @@
 <% wrap_layout :core do %>
   <% content_tag(:section, class: 'previews') do %>
-    <%= partial 'shared/previews' %>
+    <%= partial 'layouts/shared/previews' %>
 
     <% content_tag(:div) do %>
-      <%= partial 'shared/header' %>
+      <%= partial 'layouts/shared/header' %>
       <% content_tag(:div, class: 'tab') do %>
         <%= yield %>
       <% end %>
     <% end %>
   <% end %>
 <% end %>
+
