--- a/source/notes/index.html.erb
+++ b/source/notes/index.html.erb
@@ -1,13 +1,12 @@
 ---
-page_title: Notes
+title: Growth-Driven Design, Development &amp; Hacking Notes
+name: Notes
 tagline: thoughts. ideas. ramblings
+description: Well lets just write some sample text for the description.
 theme: blog
-tags: zimba russeau, ruby on rails, dsgndhat
-pageable: true
-per_page: 6
 ---
 
-<%= partial 'shared/notes' %>
+<%= partial 'layouts/shared/notes' %>
 
-<%= partial 'shared/pagination' %>
-<%= partial 'shared/footer' %>
+<%= partial 'layouts/shared/pagination' %>
+<%= partial 'layouts/shared/footer' %>
