--- a/source/layouts/page.erb
+++ b/source/layouts/page.erb
@@ -1,9 +1,9 @@
 <% wrap_layout :core do %>
   <% content_tag(:section, class: 'archives', itemscope: 'itemscope', itemtype: 'http://schema.org/Blog') do %>
-    <%= partial 'shared/header-page' %>
+    <%= partial 'layouts/shared/header-page' %>
     <% content_tag(:div, class: 'section-padding archives__container') do %>
       <%= yield %>
     <% end %>
   <% end %>
-  <%= partial 'shared/footer' %>
+  <%= partial 'layouts/shared/footer' %>
 <% end %>
